--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,12 @@
 			<version>2.7.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+			<scope>compile</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
