--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
 			<version>3.12.0</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.17.2</version>
+			<scope>compile</scope>
+		</dependency>
 		
 		<dependency>
 			<groupId>junit</groupId>
