--- a/src/main/resources/configurationFile.json
+++ b/src/main/resources/configurationFile.json
@@ -11,26 +11,31 @@
       ],
       "width": 42,
       "height": 42,
-      "pluginAttributes": []
-    },
-    {
-      "type": "officer",
-      "position": [
-        14,
-        13
+      "generates": [
+        {
+          "passenger"
+        ],
+          "generationRate": 258,
+          "pluginAttributes": []
+        },
+        {
+          "type": "officer",
+          "position": [
+            14,
+            13
+          ],
+          "width": null,
+          "height": null,
+          "pluginAttributes": []
+        }
       ],
-      "width": null,
-      "height": null,
-      "pluginAttributes": []
-    }
-  ],
-  "generatedEntities": [
-    {
-      "type": "passenger",
-      "generators": [
-        "entrance"
-      ],
-      "generationRate": 258,
+      "generatedEntities": [
+        {
+          "type": "passenger",
+          "generators": [
+            "entrance"
+          ],
+          "generationRate": 258,
       "pluginAttributes": []
     }
   ]
