changed JSON-Libory for json-simple to gson

--- a/src/main/resources/configurationFile.json
+++ b/src/main/resources/configurationFile.json
@@ -13,29 +13,22 @@
       "height": 42,
       "generates": [
         {
-          "passenger"
-        ],
-          "generationRate": 258,
-          "pluginAttributes": []
-        },
-        {
-          "type": "officer",
-          "position": [
-            14,
-            13
-          ],
-          "width": null,
-          "height": null,
-          "pluginAttributes": []
+          "type": "passenger",
+          "generationRate": 258
         }
       ],
-      "generatedEntities": [
-        {
-          "type": "passenger",
-          "generators": [
-            "entrance"
-          ],
-          "generationRate": 258,
+      "pluginAttributes": []
+    },
+    {
+      "type": "officer",
+      "position": [
+        14,
+        13
+      ],
+      "generates": [
+      ],
+      "width": null,
+      "height": null,
       "pluginAttributes": []
     }
   ]
