Implemented simulation core and run the simulation on startup
+ Added default configuration path
+ Added functionality to load a configuration and a world on startup
+ Added a method to obtain the defining plugin for entities
+ Added support for String as a basic configuration entry type
+ Added public no-arg constructor to GenerationAttributes for use by Gson
+ Added a very basic implementation for SimulationWorld, which simply invokes all entity update methods
+ Defined default simulation duration to 10.000 cycles
~ Changed EntityConfiguration.getPluginAttributes to return JsonObject rather than JsonArray
~ Changed EntityConfiguration and SimulationConfiguration to be public
~ Updated Gson dependencies to 2.9.0 to resolve an issue that java.sql.Time is not available
~ Fixed ConfigurationTypeRegistry to accept Boolean type
~ Fixed a bug that the plugin manager does not invoke the Plugin.activate method on plugins

--- a/src/main/resources/configurationFile.json
+++ b/src/main/resources/configurationFile.json
@@ -17,7 +17,7 @@
 					"generationRate": 258
 				}
 			],
-			"pluginAttributes": []
+			"pluginAttributes": {}
 		},
 		{
 			"type": "officer",
@@ -28,7 +28,7 @@
 			"generates": [],
 			"width": null,
 			"height": null,
-			"pluginAttributes": []
+			"pluginAttributes": {}
 		}
 	]
 }
