--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,11 @@
 			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<version>15.0.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -115,7 +119,12 @@
 					</execution>
 				</executions>
 			</plugin>
-			
+
+			<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>0.0.5</version>
+			</plugin>
 		</plugins>
 		
 	</build>
